Fixed CORS error in task-service